2001-11-28  Alex Larsson  <alexl@redhat.com>

	* panel-applet.c (panel_applet_button_press):
	Return TRUE if handled popup. This removes the double
	popup menu bug.

2001-11-27  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: include panel-applet-marshal.h in
	  panel-applet-marshal.c. Not a very pretty hack.

2001-11-27  Mark McLoughlin  <mark@skynet.ie>

	* *.*: Move from $(top_srcdir)/panel.
