@@ -1,3 +1,8 @@
+2001-11-30  Mark McLoughlin  <mark@skynet.ie>
+
+	* panel-applet.[ch]: (panel_applet_get_size),
+	(panel_applet_get_orient): new accessor methods.
+
 2001-11-28  Alex Larsson  <alexl@redhat.com>
 
 	* panel-applet.c (panel_applet_button_press):
